fixed problem with segs of manuscript references not showing up because they were in closers, highlighted names in the TEI documents when coming from a names search
git-svn-id: file:///tmp/salem@48 07c41579-21cc-4512-95e7-b8629c30e65c

--- a/trunk/branch/cocoon/css/style.css
+++ b/trunk/branch/cocoon/css/style.css
@@ -185,6 +185,9 @@ ul li {
 	max-height:60px;
 	border:1px solid black;
 }
+.opener, .closer {
+	margin-left:40px;
+}
 /* ---------------------------------------------------------------------------------------------------------------- */
 /* ---------->>> Search Highlighting <<<----------------------------------------------------------------------------- */
 /* ---------------------------------------------------------------------------------------------------------------- */
